# qmem-digital-twin

./: .env.example  .gitignore  README.md  docker-compose.yml  scene-debug.json
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: assembly_solver.py  config.py  crud.py  db.py  kinds_manifest.py  main.py  models.py  schemas.py  timing_program.py  uuid7.py  v2_bindings.py  websocket.py
backend/data/: kinds.json  thorlabs_cad_manifest.json
backend/scripts/: _blend_inspect.py  _blend_render.py  _check_kp.py  _convert_ad9959_stp_to_stl.py  _decimate_ad9959_stl.py  _finalize_ad9959_stl.py  _seed_tension_handle.py  _test_default_kp.py  audit_kind_drift.py  backfill_fiber_ends.py  backfill_ppg_timing_programs.py  fix_aom_blend.py  link_components_to_stl.py  measure_glb.py  rename_to_defaults.py  seed.py  upsert_bnc_rf_cables.py  upsert_dds_chassis_1u.py  upsert_optical_table.py  upsert_programmable_pulse_generator.py  upsert_thorlabs_rf_cables.py  upsert_ts2000a.py
backend/tests/: conftest.py  test_agent_session_lifecycle.py  test_aom_anchor_migration.py  test_assembly_solver.py  test_collins_fft.py  test_component_bindings.py  test_generalized_abcd.py  test_hg_modes.py  test_kind_params_partition.py  test_kinds_manifest.py  test_optical_envelope.py  test_optical_schemas.py  test_optical_solver.py  test_optics_cavity.py  test_optics_crystal.py  test_palace_io.py  test_relation_solver.py  test_rf_propagation.py  test_spice_parser.py  test_spinapi_compile.py  test_timing_program.py  test_touchstone.py  (+7 more)
(+603 files in other folders)
