[project]
name = "qmem-digital-twin-backend"
version = "0.1.0"
description = "FastAPI backend for a quantum memory digital twin MVP."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "websockets>=13.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9"
]

[tool.ruff]
line-length = 100
target-version = "py311"
